# Rigor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  atlas.json  benchmark.py  claims.py  pyproject.toml  rigor_checks.py
auditkit/: __init__.py  config.py  core.py  delta.py  detectors.py  registry.py  resistance.py  runner.py  testimpact_carrier.py
auditkit/lang/: ir.py  python_frontend.py  treesitter_frontend.py
docs/: SOURCE_AUDIT.md  archaudit.example.toml  example_pr_summary.md
suite/: rigor-suite-instrument.html
tests/: run.py
tests/fixtures/demo_godcycle/: inventory.py  orders.py
tests/fixtures/demo_lean/: app.py  shapes.py
tests/fixtures/demo_tangled/: orphans.py  payments.py
tools/: audit.py  audit_delta.py
